# knowledge-rep

./: cities_ie.csv  discover_ireland.py  lab2.py  main.py  pyproject.toml
